--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# ignore the cache directory
+**/datasets
+
+# Mac specific
+**/.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
