--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 pandas==1.4.2
 requests==2.28.1
+python-dateutil==2.8.1
 git+https://github.com/akcarsten/bitfinex_api.git
+git+https://github.com/martincpt/auto-create-directories.git
