--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ setuptools>=45.0
 pandas>=1.4.2
 requests>=2.28.1
 python-dateutil>=2.8.1
+python-binance==1.0.16
 git+https://github.com/akcarsten/bitfinex_api.git#egg=bitfinex-tencars
 git+https://github.com/martincpt/auto-create-directories.git#egg=auto_create_directories
