--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 setuptools>=45.0
 pandas>=1.4.2
-requests>=2.28.1
+requests>=2.28.0
 python-dateutil>=2.8.1
 python-binance==1.0.16
-git+https://github.com/akcarsten/bitfinex_api.git#egg=bitfinex-tencars
+git+https://github.com/akcarsten/bitfinex_api.git@134136908f829cb6d9b4365557dd6110d783e972#egg=bitfinex-tencars
 git+https://github.com/martincpt/auto-create-directories.git#egg=auto_create_directories
